--- a/less/global.less
+++ b/less/global.less
@@ -10,22 +10,27 @@
     font-family: 'Roboto', sans-serif;
   }
   
-  h1, h2, h3, h4, h5 {
-    font-family: 'Indie Flower', cursive;
-  }
-  
   h1 {
-    font-size: 4rem;
+    font-size: 4.8rem;
+    font-family: 'Cormorant Garamond', semi-bold;
   }
   
   h2 {
-    font-size: 3.2rem;
-   
+    font-size: 3.6rem;
+    font-family: 'Cormorant Garamond', medium italic;
   }
   
   h3 {
-    font-size: 2.5rem;
+    font-size: 3rem;
+    font-family: 'Roboto', bold;
 
+  }
+  h4{
+      font-family: 'Roboto', bold;
+      font-size: 2.4rem;
+  }
+  h5 {
+      font-family: 'Cormorant Garamond', medium italic;
   }
   
   p {
@@ -40,8 +45,8 @@
   }
   
   .site-wrapper {
-    max-width: 800px;
+    max-width: 1000px;
     width: 100%;
-    margin: 4rem auto;
+    margin: 2rem auto;
   }
   
