--- a/css/index.css
+++ b/css/index.css
@@ -159,6 +159,10 @@ p {
   line-height: 1.5;
   font-size: 1.6rem;
 }
+a {
+  text-decoration: none;
+  font-size: 2rem;
+}
 img {
   max-width: 100%;
   height: auto;
@@ -170,4 +174,34 @@ img {
 }
 header {
   background: grey;
+}
+footer nav .fa {
+  padding: 1rem;
+  width: 3rem;
+  text-align: center;
+  text-decoration: none;
+  margin: 0.5rem 2rem;
+  border-radius: 50%;
+}
+footer nav .fa:hover {
+  opacity: 0.7;
+}
+footer nav .fa-facebook {
+  background: #3B5998;
+  color: white;
+}
+footer nav .fa-youtube {
+  background: #bb0000;
+  color: white;
+}
+footer nav .fa-instagram {
+  background: #125688;
+  color: white;
+}
+footer nav .fa-twitter {
+  background: #55ACEE;
+  color: white;
+}
+footer p {
+  font-size: 1rem;
 }
