--- a/less/global.less
+++ b/less/global.less
@@ -36,7 +36,11 @@
   p {
     line-height: 1.5;
     font-size: 1.6rem;
-    
+  }
+  a{
+      text-decoration: none;
+      font-size: 2rem;
+      
   }
   
   img {
