--- a/less/variables.less
+++ b/less/variables.less
@@ -6,10 +6,10 @@
 // Color assignments 
 @font-color: white;
 @body-color:#EED98F;
-@title-color: #BF9018;
+@title-color: #BF9018;  
 
 // @button-bg: ;
-@main-bg: #169923; 
+@main-bg: #169923b3; 
 @nav-border:#585656;
 @nav-bg:#0D5814 ;
 
