--- a/less/footer.less
+++ b/less/footer.less
@@ -3,12 +3,13 @@ footer{
     display:flex;
     flex-direction: column;
     align-items: center;
+    padding: 1rem;
     nav{
         width: 42%;
         .fa {
-            font-size: 3.5rem;
+            font-size: 2.5rem;
             padding: 1rem;
-            width: 6rem;
+            width: 5.5rem;
             text-align: center;
             text-decoration: none;
             margin: 0.5rem 2rem;
