--- a/less/hero-page.less
+++ b/less/hero-page.less
@@ -1,7 +1,19 @@
 .site-wrapper{
     background:@main-bg;
+    #bgVideo {
+        position: fixed;
+        right: 0;
+        bottom: 0;
+        z-index:-100;
+        min-width: 100%; 
+        min-height: 100%;
+    }//Background video
     .CTA{
+        border: 1px solid red;
+ 
         .cta-txt{
+            border: 1px solid red;
+            width: 50%;
             h1{
                 color: @body-color;
             }
