--- a/less/hero-page.less
+++ b/less/hero-page.less
@@ -1,19 +1,16 @@
 .site-wrapper{
-    background:@main-bg;
-    #bgVideo {
-        position: fixed;
-        right: 0;
-        bottom: 0;
-        z-index:-100;
-        min-width: 100%; 
-        min-height: 100%;
-    }//Background video
     .CTA{
-        border: 1px solid red;
- 
+        
+        background-image: url("/imgs/book.jpg");
+        height: 500px;
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        position: relative;
+        display:flex;
         .cta-txt{
             border: 1px solid red;
-            width: 50%;
+
             h1{
                 color: @body-color;
             }
@@ -21,5 +18,44 @@
                 color:@body-color;
             }
         }//End of CTA TEXT
+        .bglogo{
+            height: 60%;
+            z-index:-100;
+            border: 1px solid red;
+            img{
+                height: 100%;
+                width: auto;
+                image-rendering: auto;
+                image-rendering: crisp-edges;
+                image-rendering: pixelated;
+            }
+        }
     }//End of CTA
+    // .videoWrapper{
+    //     #bgVideo {
+    //         position: fixed;
+    //         right: 0;
+    //         bottom: 0;
+    //         z-index:-100;
+    //         max-width: 100%; 
+    //         max-height: 100%;
+    //     }//Background video
+    // }
 }//Site Wrapper
+
+// .bodyContent{
+//     max-width: 1000px;
+//     width: 100%;
+//     margin: 0  auto;
+    
+    
+    
+    
+// }
+
+// .bodyContent {
+//     background-image: url("/w3images/photographer.jpg");
+//     background-color: #cccccc;
+//     
+
+//   }
