--- a/less/global.less
+++ b/less/global.less
@@ -5,7 +5,9 @@
   html {
     font-size: 62.5%;
   }
-  
+  body{
+    padding-top: 9.6rem;
+  }
   html, body {
     font-family: 'Roboto', sans-serif;
   }
