--- a/less/hero-page.less
+++ b/less/hero-page.less
@@ -2,12 +2,14 @@
     .CTA{
         
         background-image: url("/imgs/book.jpg");
-        height: 500px;
+        height: 900px;
+        padding: 10rem;
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
         position: relative;
         display:flex;
+        align-content: center;
         .cta-txt{
             border: 1px solid red;
 
@@ -20,7 +22,7 @@
         }//End of CTA TEXT
         .bglogo{
             height: 60%;
-            z-index:-100;
+            // z-index:-100;
             border: 1px solid red;
             img{
                 height: 100%;
