--- a/less/navigation.less
+++ b/less/navigation.less
@@ -20,7 +20,7 @@ header {
             a{
                 font-size: 1.8rem;
                 &:hover{
-                    color: darken(@font-color, 20%);
+                    color:#BF9018;
                 }
             }
         }//NAV
