--- a/css/index.css
+++ b/css/index.css
@@ -133,7 +133,7 @@ html {
   font-size: 62.5%;
 }
 body {
-  padding-top: 9.6rem;
+  padding-top: 8.85rem;
 }
 html,
 body {
@@ -210,7 +210,7 @@ header .navbar nav a {
   font-size: 1.8rem;
 }
 header .navbar nav a:hover {
-  color: #cccccc;
+  color: #BF9018;
 }
 footer {
   background: #0D5814;
@@ -218,9 +218,6 @@ footer {
   flex-direction: column;
   align-items: center;
   padding: 1.25rem;
-}
-footer nav {
-  width: 42%;
 }
 footer nav .fa {
   font-size: 2.5rem;
@@ -251,11 +248,12 @@ footer nav .fa-twitter {
   color: white;
 }
 footer p {
+  padding: 0.5rem;
   font-size: 1rem;
 }
 .site-wrapper .CTA {
   background-image: url("/imgs/book.jpg");
-  height: 900px;
+  height: 910px;
   padding: 10rem;
   background-position: center;
   background-repeat: no-repeat;
@@ -263,6 +261,7 @@ footer p {
   position: relative;
   display: flex;
   align-content: center;
+  z-index: -100;
 }
 .site-wrapper .CTA .cta-txt {
   border: 1px solid red;
