--- a/less/footer.less
+++ b/less/footer.less
@@ -5,7 +5,8 @@ footer{
     align-items: center;
     padding: 1.25rem;
     nav{
-        width: 42%;
+        // width: 42%;
+
         .fa {
             font-size: 2.5rem;
             padding: 1rem;
@@ -36,6 +37,7 @@ footer{
         }
     }
     p{
+        padding:0.5rem;
         font-size: 1rem;
     }
 }//END OF FOOTER
