--- a/less/hero-page.less
+++ b/less/hero-page.less
@@ -2,7 +2,7 @@
     .CTA{
         
         background-image: url("/imgs/book.jpg");
-        height: 900px;
+        height: 910px;
         padding: 10rem;
         background-position: center;
         background-repeat: no-repeat;
@@ -10,6 +10,7 @@
         position: relative;
         display:flex;
         align-content: center;
+        z-index:-100;
         .cta-txt{
             border: 1px solid red;
 
