--- a/css/index.css
+++ b/css/index.css
@@ -254,32 +254,29 @@ footer p {
 .site-wrapper .CTA {
   background-image: url("/imgs/book.jpg");
   height: 910px;
-  padding: 10rem;
+  border: 1px solid red;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
   position: relative;
   display: flex;
-  align-content: center;
+  justify-content: center;
+  align-items: center;
   z-index: -100;
 }
 .site-wrapper .CTA .cta-txt {
+  display: flex;
   border: 1px solid red;
+  flex-direction: column;
+  width: 60%;
+  height: 80%;
 }
 .site-wrapper .CTA .cta-txt h1 {
-  color: #EED98F;
+  color: #332706;
 }
 .site-wrapper .CTA .cta-txt h3 {
-  color: #EED98F;
+  color: #332706;
 }
-.site-wrapper .CTA .bglogo {
-  height: 60%;
-  border: 1px solid red;
-}
-.site-wrapper .CTA .bglogo img {
-  height: 100%;
-  width: auto;
-  image-rendering: auto;
-  image-rendering: crisp-edges;
-  image-rendering: pixelated;
+.site-wrapper .CTA .cta-txt .signUp {
+  width: 40%;
 }
