--- a/less/navigation.less
+++ b/less/navigation.less
@@ -20,7 +20,13 @@ header {
             a{
                 font-size: 1.8rem;
                 &:hover{
-                    color:#BF9018;
+                    color:@hover-color;
+                }
+            }
+            #signIn{
+                color:@title-color;
+                &:hover{
+                    color:@hover-color;
                 }
             }
         }//NAV
