--- a/less/variables.less
+++ b/less/variables.less
@@ -7,6 +7,7 @@
 @font-color: white;
 @body-color:#EED98F;
 @title-color: #BF9018;  
+@hover-color: #332706;
 
 // @button-bg: ;
 @main-bg: #169923b3; 
