--- a/less/hero-page.less
+++ b/less/hero-page.less
@@ -18,6 +18,7 @@
             // 
             border: 1px solid red;
             flex-direction: column;
+            
             width:60%;
             height: 80%;
             h1{
@@ -27,6 +28,7 @@
                 color:#332706;
             }
             .signUp{
+                align-items: baseline;
                 width:40%;
             }
         }//End of CTA TEXT
@@ -48,26 +50,11 @@
     //         position: fixed;
     //         right: 0;
     //         bottom: 0;
-    //         z-index:-100;
+    //         z-index:-200;
     //         max-width: 100%; 
     //         max-height: 100%;
     //     }//Background video
     // }
 }//Site Wrapper
 
-// .bodyContent{
-//     max-width: 1000px;
-//     width: 100%;
-//     margin: 0  auto;
-    
-    
-    
-    
-// }
 
-// .bodyContent {
-//     background-image: url("/w3images/photographer.jpg");
-//     background-color: #cccccc;
-//     
-
-//   }
