fixed body sizing and trying out video on new design

--- a/less/hero-page.less
+++ b/less/hero-page.less
@@ -2,9 +2,8 @@
     .CTA{
         
         background-image: url("/imgs/book.jpg");
-        height: 910px;
-        border: 1px solid red;
-        // padding: 10rem;
+        height: 880px;
+        border: 0.2rem solid @border-color;
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
@@ -45,16 +44,17 @@
         //     }
         // }
     }//End of CTA
-    // .videoWrapper{
-    //     #bgVideo {
-    //         position: fixed;
-    //         right: 0;
-    //         bottom: 0;
-    //         z-index:-200;
-    //         max-width: 100%; 
-    //         max-height: 100%;
-    //     }//Background video
-    // }
+    .videoWrapper{
+        #bgVideo {
+            position: fixed;
+            right: 0;
+            bottom: 0;
+            top:0;
+            z-index:-200;
+            max-width: 100%; 
+            max-height: 100%;
+        }//Background video
+    }
 }//Site Wrapper
 
 
