--- a/less/variables.less
+++ b/less/variables.less
@@ -8,7 +8,7 @@
 @body-color:#EED98F;
 @title-color: #BF9018;  
 @hover-color: #332706;
-
+@border-color: #E5E4E1;
 // @button-bg: ;
 @main-bg: #169923b3; 
 @nav-border:#585656;
