--- a/css/index.css
+++ b/css/index.css
@@ -133,7 +133,7 @@ html {
   font-size: 62.5%;
 }
 body {
-  padding-top: 8.85rem;
+  padding-top: 9.85rem;
 }
 html,
 body {
@@ -187,9 +187,10 @@ img {
 header {
   position: fixed;
   top: 0;
-  background: #0D5814;
+  background: #169923b3;
   width: 100%;
   padding: 2rem;
+  border-bottom: 0.2rem dashed #E5E4E1;
 }
 header .navbar {
   margin: 0 auto;
@@ -219,11 +220,12 @@ header .navbar nav #signIn:hover {
   color: #332706;
 }
 footer {
-  background: #0D5814;
+  background: #169923b3;
   display: flex;
   flex-direction: column;
   align-items: center;
   padding: 1.25rem;
+  border-top: 0.2rem dashed #E5E4E1;
 }
 footer nav .fa {
   font-size: 2.5rem;
@@ -259,8 +261,8 @@ footer p {
 }
 .site-wrapper .CTA {
   background-image: url("/imgs/book.jpg");
-  height: 910px;
-  border: 1px solid red;
+  height: 880px;
+  border: 0.2rem solid #E5E4E1;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -286,4 +288,13 @@ footer p {
 .site-wrapper .CTA .cta-txt .signUp {
   align-items: baseline;
   width: 40%;
+}
+.site-wrapper .videoWrapper #bgVideo {
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  top: 0;
+  z-index: -200;
+  max-width: 100%;
+  max-height: 100%;
 }
