--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,9 +1,10 @@
 header {
     position: fixed;
     top:0;
-    background:@nav-bg;
+    background:@main-bg;
     width:100%;
     padding:2rem;
+    border-bottom: 0.2rem dashed @border-color;
     .navbar{
         margin: 0 auto;
         width:1000px;
