--- a/less/footer.less
+++ b/less/footer.less
@@ -1,5 +1,5 @@
 footer{
-    background: @main-bg;
+    background: @temp;
     display:flex;
     flex-direction: column;
     align-items: center;
