--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,7 +1,7 @@
 header {
     position: fixed;
     top:0;
-    background:@main-bg;
+    background:@temp;
     width:100%;
     padding:2rem;
     border-bottom: 0.2rem dashed @border-color;
@@ -25,7 +25,7 @@ header {
                 }
             }
             #signIn{
-                color:@title-color;
+                color:@nav-bg;
                 &:hover{
                     color:@hover-color;
                 }
