--- a/less/hero-page.less
+++ b/less/hero-page.less
@@ -3,7 +3,8 @@
         
         background-image: url("/imgs/book.jpg");
         height: 880px;
-        border: 0.2rem solid @border-color;
+        border-left: 0.2rem solid @border-color;
+        border-right: 0.2rem solid @border-color;
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
