--- a/less/variables.less
+++ b/less/variables.less
@@ -9,8 +9,9 @@
 @title-color: #BF9018;  
 @hover-color: #332706;
 @border-color: #E5E4E1;
+@temp: rgba(191, 144, 24, 0.708);
 // @button-bg: ;
-@main-bg: #169923b3; 
+@main-bg: #169923de; 
 @nav-border:#585656;
 @nav-bg:#0D5814 ;
 
