--- a/less/hero-page.less
+++ b/less/hero-page.less
@@ -1,14 +1,14 @@
 .site-wrapper{
     .CTA{
         
-        background-image: url("/imgs/book.jpg");
+        // background-image: url("/imgs/book.jpg");
         height: 880px;
-        border-left: 0.2rem solid @border-color;
-        border-right: 0.2rem solid @border-color;
-        background-position: center;
-        background-repeat: no-repeat;
-        background-size: cover;
-        position: relative;
+        // border-left: 0.2rem solid @border-color;
+        // border-right: 0.2rem solid @border-color;
+        // background-position: center;
+        // background-repeat: no-repeat;
+        // background-size: cover;
+        // position: relative;
         display:flex;
         justify-content: center;
         align-items: center;
@@ -45,6 +45,13 @@
         //     }
         // }
     }//End of CTA
+    .bw{
+        background: rgba(0, 0, 0, 0.358);
+        width:100%;
+        height: 100%;
+        z-index:2;
+        border:1px solid black;
+    }
     .videoWrapper{
         #bgVideo {
             position: fixed;
@@ -57,5 +64,5 @@
         }//Background video
     }
 }//Site Wrapper
-
+//solid grey div over the video to make it black and white. and only color is from the green.
 
