--- a/less/footer.less
+++ b/less/footer.less
@@ -1,10 +1,9 @@
 footer{
-    background: @temp;
+    background: @main-bg;
     display:flex;
     flex-direction: column;
     align-items: center;
     padding: 1.25rem;
-    border-top: 0.2rem dashed @border-color;
     nav{
         // width: 42%;
 
