--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,10 +1,9 @@
 header {
     position: fixed;
     top:0;
-    background:@temp;
+    background:@main-bg;
     width:100%;
     padding:2rem;
-    border-bottom: 0.2rem dashed @border-color;
     .navbar{
         margin: 0 auto;
         width:1000px;
@@ -25,7 +24,7 @@ header {
                 }
             }
             #signIn{
-                color:@nav-bg;
+                color:@title-color;
                 &:hover{
                     color:@hover-color;
                 }
