--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,7 +1,7 @@
 header {
     position: fixed;
     top:0;
-    background:@main-bg;
+    background:@nav-bg;
     width:100%;
     padding:2rem;
     .navbar{
