--- a/less/hero-page.less
+++ b/less/hero-page.less
@@ -23,8 +23,9 @@
             height: 80%;
             h1{
                 color: #332706;
+                font-size: 10rem;
             }
-            h3{
+            h2{
                 color:#332706;
             }
             .signUp{
@@ -32,26 +33,8 @@
                 width:40%;
             }
         }//End of CTA TEXT
-        // .bglogo{
-        //     height: 60%;
-        //     // z-index:-100;
-        //     border: 1px solid red;
-        //     img{
-        //         height: 100%;
-        //         width: auto;
-        //         image-rendering: auto;
-        //         image-rendering: crisp-edges;
-        //         image-rendering: pixelated;
-        //     }
-        // }
     }//End of CTA
-    .bw{
-        background: rgba(0, 0, 0, 0.358);
-        width:100%;
-        height: 100%;
-        z-index:2;
-        border:1px solid black;
-    }
+
     .videoWrapper{
         #bgVideo {
             position: fixed;
