--- a/css/index.css
+++ b/css/index.css
@@ -272,11 +272,11 @@ footer p {
   height: 80%;
 }
 .site-wrapper .CTA .cta-txt h1 {
-  color: #332706;
+  color: #F2B71E;
   font-size: 10rem;
 }
 .site-wrapper .CTA .cta-txt h2 {
-  color: #332706;
+  color: #F2B71E;
 }
 .site-wrapper .CTA .cta-txt .signUp {
   align-items: baseline;
