--- a/less/hero-page.less
+++ b/less/hero-page.less
@@ -12,11 +12,11 @@
             width:60%;
             height: 80%;
             h1{
-                color: #332706;
+                color: #F2B71E;
                 font-size: 10rem;
             }
             h2{
-                color:#332706;
+                color:#F2B71E;
             }
             .signUp{
                 align-items: baseline;
