--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,14 +1,14 @@
 // Mixins Here
 
-.button-master(@radius, @thickness, @pad){
+.button-master(@radius, @pad){
     background-color: @button-bg;
-    color: @white;
+    color: white;
     text-align: center;
     font-weight:bold;
     font-size: @buttonfont;
     border-radius: @radius;
     cursor: pointer;
-    border:@thickness solid black;
+    // border:@thickness solid black;
     padding: @pad;
 }
 
