--- a/less/variables.less
+++ b/less/variables.less
@@ -6,7 +6,7 @@
 @title-color: #BF9018;  
 @hover-color: #332706;
 @border-color: #E5E4E1;
-// @button-bg: ;
+@button-bg: #BF9018;
 @main-bg: #169923de; 
 @nav-bg:rgba(13, 88, 21, 0.92);
 
