--- a/less/footer.less
+++ b/less/footer.less
@@ -15,7 +15,7 @@ footer{
             text-decoration: none;
             margin: 0.5rem 2rem;
             border-radius: 50%; 
-        }
+        }//Social media button
         .fa:hover {
             opacity: 0.7;
         }      
@@ -35,7 +35,7 @@ footer{
             background: #55ACEE;
             color: white;
         }
-    }
+    }//Nav for social media
     p{
         padding:0.5rem;
         font-size: 1rem;
