--- a/less/hero-page.less
+++ b/less/hero-page.less
@@ -31,7 +31,7 @@
             width:40%;
             margin-left: 24rem;
             .button-master(1.5rem, 1.5rem);
-            .hover(1s);
+            .hover();
         }//Sign Up button
     }//End of CTA
 
