--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,21 +1,23 @@
 // Mixins Here
-
-.button-master(@radius, @pad){
-    background-color: @button-bg;
-    color: white;
-    text-align: center;
-    font-weight:bold;
-    font-size: @buttonfont;
-    border-radius: @radius;
-    cursor: pointer;
-    // border:@thickness solid black;
-    padding: @pad;
-}
-
-.hover(@time) {
-    &:hover {
-      transform: scale(1.10);
+.hover(){
+  &:hover{
       background-color: lighten(@button-bg, 20%);
-      transition: @time;
-    }
+      box-shadow: 0px 15px 20px rgba(0, 0, 0, 0.4);
+      color: #fff;
+      transform: translateY(-7px);
   }
+}
+.button-master(@radius, @pad){
+  background-color: @button-bg;
+  border:1px solid @button-bg;
+  color: white;
+  text-align: center;
+  font-weight:bold;
+  font-size: @buttonfont;
+  border-radius: @radius;
+  cursor: pointer;
+  // border:@thickness solid black;
+  padding: @pad;
+  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+transition: all 0.3s ease 0s;
+}
