--- a/less/navigation.less
+++ b/less/navigation.less
@@ -10,6 +10,10 @@ header {
         display:flex;
         .logo{
             width:82%;
+            @media @mobile{
+                width: 20%;
+                border: 1px solid red;
+            }
         }
         nav{
             margin: 0 auto;
