--- a/less/global.less
+++ b/less/global.less
@@ -7,6 +7,9 @@
   }
   body{
     padding-top: 9.85rem;
+    @media @mobile{
+      // padding-top: 0rem;
+    }
   }
   html, body {
     font-family: 'Roboto', sans-serif;
