working from feedback

--- a/less/global.less
+++ b/less/global.less
@@ -60,3 +60,10 @@
     margin: 0  auto;
   }
   
+.background{
+  background:black;
+  z-index:-189;
+  height: auto;
+  width:100%;
+  background: rgba(255, 255, 255, 0.591);
+}
