--- a/less/navigation.less
+++ b/less/navigation.less
@@ -19,7 +19,7 @@ header {
             @media @mobile{
                 width: 70%;
             }//Phone
-        }
+        }//logo
         nav{
             margin: 0 auto;
             width:15%;
