--- a/css/index.css
+++ b/css/index.css
@@ -186,6 +186,13 @@ img {
   width: 100%;
   margin: 0  auto;
 }
+.background {
+  background: black;
+  z-index: -189;
+  height: auto;
+  width: 100%;
+  background: rgba(255, 255, 255, 0.591);
+}
 header {
   position: fixed;
   top: 0;
@@ -244,18 +251,14 @@ header .navbar nav #signIn:hover {
   color: #332706;
 }
 footer {
+  position: fixed;
+  bottom: 0;
   background: rgba(13, 88, 21, 0.92);
   display: flex;
   flex-direction: column;
   align-items: center;
   padding: 1.25rem;
-}
-@media (max-width: 500px) {
-  footer {
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-  }
+  width: 100%;
 }
 footer nav .fa {
   font-size: 2.5rem;
@@ -297,7 +300,8 @@ footer p {
   font-size: 1rem;
 }
 .site-wrapper .CTA {
-  height: 880px;
+  height: auto;
+  width: auto;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -317,7 +321,6 @@ footer p {
   height: 30%;
   margin-left: 24rem;
   text-align: center;
-  background: rgba(255, 255, 255, 0.399);
 }
 @media (max-width: 500px) {
   .site-wrapper .CTA .cta-txt {
@@ -329,19 +332,17 @@ footer p {
   color: #F2B71E;
   font-size: 10rem;
   padding-bottom: 5rem;
-  text-shadow: 2px 2px #070707;
 }
 @media (max-width: 500px) {
   .site-wrapper .CTA .cta-txt h1 {
     padding-bottom: 3rem;
   }
 }
-.site-wrapper .CTA .cta-txt h2 {
+.site-wrapper .CTA .cta-txt h3 {
   color: #F2B71E;
-  text-shadow: 2px 2px #070707;
 }
 @media (max-width: 500px) {
-  .site-wrapper .CTA .cta-txt h2 {
+  .site-wrapper .CTA .cta-txt h3 {
     padding-bottom: 2rem;
   }
 }
@@ -373,20 +374,15 @@ footer p {
     width: 65%;
   }
 }
-.site-wrapper .videoWrapper #bgVideo {
+.site-wrapper .videoWrapper {
   position: fixed;
-  right: 0;
-  bottom: 0;
-  top: 0;
+  top: 50%;
+  left: 50%;
+  min-width: 100%;
+  min-height: 100%;
+  width: auto;
+  height: auto;
   z-index: -200;
-  max-width: 100%;
-  max-height: 100%;
-}
-@media (max-width: 500px) {
-  .site-wrapper .videoWrapper {
-    min-width: 100%;
-    min-height: 100%;
-    width: auto;
-    height: auto;
-  }
+  -webkit-transform: translateX(-50%) translateY(-50%);
+  transform: translateX(-50%) translateY(-50%);
 }
