--- a/less/global.less
+++ b/less/global.less
@@ -60,10 +60,10 @@
     margin: 0  auto;
   }
   
-.background{
+.backgroundLanding{
   background:black;
   z-index:-189;
   height: auto;
   width:100%;
-  background: rgba(255, 255, 255, 0.591);
+  background: rgba(94, 93, 93, 0.591);
 }
