--- a/less/navigation.less
+++ b/less/navigation.less
@@ -5,19 +5,19 @@ header {
     width:100%;
     padding:2rem;
     @media @mobile{
-        padding:1rem;
+        padding:0.2rem;
     }//Phone
     .navbar{
         margin: 0 auto;
         width:1000px;
         display:flex;
         @media @mobile{
-            width: 100%;
+            width: 500px;
         }//Phone
         .logo{
             width:82%;
             @media @mobile{
-                width: 70%;
+                width: 65%;
             }//Phone
         }//logo
         nav{
