--- a/css/index.css
+++ b/css/index.css
@@ -191,6 +191,7 @@ img {
   z-index: -189;
   height: auto;
   width: 100%;
+  height: 100vh;
   background: rgba(94, 93, 93, 0.591);
 }
 header {
@@ -312,6 +313,8 @@ footer p {
   }
 }
 .site-wrapper .CTA .cta-txt {
+  display: flex;
+  flex-direction: column;
   width: 100%;
   height: 100%;
   border: 1px solid red;
@@ -369,15 +372,23 @@ footer p {
     width: 65%;
   }
 }
+.site-wrapper #bgVideo {
+  width: 200vh;
+  height: 200vh;
+  margin: 0;
+}
 .site-wrapper .videoWrapper {
   position: fixed;
   top: 50%;
   left: 50%;
-  min-width: 100%;
-  min-height: 100%;
   width: 100%;
-  height: auto;
+  height: 100%;
   z-index: -200;
-  -webkit-transform: translateX(-50%) translateY(-50%);
-  transform: translateX(-50%) translateY(-50%);
+  -webkit-transform: translateX(-50%) translateY(-100%);
+  transform: translateX(-50%) translateY(-100%);
+}
+@media (max-width: 500px) {
+  .site-wrapper .videoWrapper {
+    display: none;
+  }
 }
