--- a/less/hero-page.less
+++ b/less/hero-page.less
@@ -12,8 +12,8 @@
             height:auto;
         }//Phone
         .cta-txt{
-            // display:flex;
-            // flex-direction: column;
+            display:flex;
+            flex-direction: column;
             width:100%;
             height: 100%;
             border: 1px solid red;
@@ -51,18 +51,34 @@
             }//Phone
         }//Sign Up button
     }//End of CTA
+    #bgVideo{
+        width: 200vh;
+        height: 200vh;
+        margin:0;
+        // position: fixed;
+        // top:0;
+        // left:0;
+        // width:100vw;
+        // height: 100vw;
+        // z-index: -200;
+        // min-width: 100vw;
+        // min-height: 100vw;
+        //         -webkit-transform: translateX(-50%) translateY(-50%);
+        //         transform: translateX(-50%) translateY(-50%);
+    }
     .videoWrapper{ 
         position: fixed;
         top: 50%;
         left: 50%;
-        min-width: 100%;
-        min-height: 100%;
+
         width: 100%;
-        height: auto;
+        height: 100%;
         z-index: -200;
-        -webkit-transform: translateX(-50%) translateY(-50%);
-                transform: translateX(-50%) translateY(-50%);
-        
+        -webkit-transform: translateX(-50%) translateY(-100%);
+                transform: translateX(-50%) translateY(-100%);
+            @media @mobile{
+                display: none;
+            }
     }//video
 }//Site Wrapper
 
