--- a/css/index.css
+++ b/css/index.css
@@ -189,9 +189,8 @@ img {
 .backgroundLanding {
   background: black;
   z-index: -189;
-  height: auto;
-  width: 100%;
-  height: 100vh;
+  width: auto;
+  height: 90vh;
   background: rgba(235, 231, 231, 0.625);
 }
 header {
@@ -300,11 +299,13 @@ footer p {
   padding: 0.5rem;
   font-size: 1rem;
 }
+.site-wrapper {
+  border: 1px solid red;
+}
 .site-wrapper .CTA {
   height: auto;
   width: 100%;
   z-index: -100;
-  border: 1px solid red;
 }
 @media (max-width: 500px) {
   .site-wrapper .CTA {
@@ -317,7 +318,6 @@ footer p {
   flex-direction: column;
   width: 100%;
   height: 100%;
-  border: 1px solid red;
   text-align: justify;
 }
 @media (max-width: 500px) {
@@ -373,8 +373,8 @@ footer p {
   }
 }
 .site-wrapper #bgVideo {
-  width: 200vh;
-  height: 200vh;
+  width: auto;
+  height: 155vh;
   margin: 0;
 }
 .site-wrapper .videoWrapper {
@@ -384,8 +384,8 @@ footer p {
   width: 100%;
   height: 100%;
   z-index: -200;
-  -webkit-transform: translateX(-50%) translateY(-100%);
-  transform: translateX(-50%) translateY(-100%);
+  -webkit-transform: translateX(-65%) translateY(-100%);
+  transform: translateX(-65%) translateY(-100%);
 }
 @media (max-width: 500px) {
   .site-wrapper .videoWrapper {
