--- a/less/global.less
+++ b/less/global.less
@@ -63,8 +63,7 @@
 .backgroundLanding{
   background:black;
   z-index:-189;
-  height: auto;
-  width:100%;
-  height: 100vh;
+  width:auto;
+  height: 90vh;
   background: rgba(235, 231, 231, 0.625);
 }
