--- a/less/hero-page.less
+++ b/less/hero-page.less
@@ -1,4 +1,5 @@
 .site-wrapper{
+    border: 1px solid red;
     .CTA{
         height: auto;
         width:100%;
@@ -6,7 +7,7 @@
         // flex-direction: column;
         // justify-content: flex-start;
         z-index:-100;
-        border: 1px solid red;
+        // border: 1px solid red;
         @media @mobile{
             width: 100%;
             height:auto;
@@ -16,7 +17,7 @@
             flex-direction: column;
             width:100%;
             height: 100%;
-            border: 1px solid red;
+            // border: 1px solid red;
             
             // margin-left: 24rem;
             text-align: justify;
@@ -52,8 +53,8 @@
         }//Sign Up button
     }//End of CTA
     #bgVideo{
-        width: 200vh;
-        height: 200vh;
+        width: auto;
+        height: 155vh;
         margin:0;
         // position: fixed;
         // top:0;
@@ -74,8 +75,8 @@
         width: 100%;
         height: 100%;
         z-index: -200;
-        -webkit-transform: translateX(-50%) translateY(-100%);
-                transform: translateX(-50%) translateY(-100%);
+        -webkit-transform: translateX(-65%) translateY(-100%);
+                transform: translateX(-65%) translateY(-100%);
             @media @mobile{
                 display: none;
             }
