--- a/less/hero-page.less
+++ b/less/hero-page.less
@@ -1,8 +1,9 @@
 .site-wrapper{
-    border: 1px solid red;
+    // border: 1px solid red;
     .CTA{
         height: auto;
         width:100%;
+        height: 65%;
         // display:flex;
         // flex-direction: column;
         // justify-content: flex-start;
@@ -20,7 +21,6 @@
             // border: 1px solid red;
             
             // margin-left: 24rem;
-            text-align: justify;
             @media @mobile{
                 margin: 0;
                 width:100%;
@@ -36,21 +36,26 @@
             h3{
                 color:#332706;
                 font-size: 5.5rem;
+                padding-left: 4rem;
                 @media @mobile{
                     padding-bottom:2rem;
                 }//Phone
             }//h2
         }//End of CTA TEXT
-        .signUp{
-            align-items: baseline;
-            width:40%;
-            .button-master(1.5rem, 1.5rem);
-            .hover();
-            @media @mobile{
-                margin:0;
-                width:65%;
-            }//Phone
-        }//Sign Up button
+        .btn{
+            padding-left:20rem;
+            .signUp{//BUTTON//
+                border: 2px solid red;
+                align-items: baseline;
+                width:40%;
+                .button-master(1.5rem, 1.5rem);
+                .hover();
+                @media @mobile{
+                    margin:0;
+                    width:65%;
+                }//Phone
+            }//Sign Up button
+        }
     }//End of CTA
     #bgVideo{
         width: auto;
