--- a/less/hero-page.less
+++ b/less/hero-page.less
@@ -4,9 +4,6 @@
         height: auto;
         width:100%;
         height: 65%;
-        // display:flex;
-        // flex-direction: column;
-        // justify-content: flex-start;
         z-index:-100;
         // border: 1px solid red;
         @media @mobile{
@@ -19,8 +16,6 @@
             width:100%;
             height: 100%;
             // border: 1px solid red;
-            
-            // margin-left: 24rem;
             @media @mobile{
                 margin: 0;
                 width:100%;
@@ -28,6 +23,7 @@
             h1{
                 color: @title-color;
                 font-size: 15rem;
+                padding-top: 2rem;
                 padding-bottom:5rem;
                 @media @mobile{
                     padding-bottom:3rem;
@@ -45,7 +41,6 @@
         .btn{
             padding-left:20rem;
             .signUp{//BUTTON//
-                border: 2px solid red;
                 align-items: baseline;
                 width:40%;
                 .button-master(1.5rem, 1.5rem);
